# ichigo-engine-core

./: CMakeLists.txt
include/chess/: board.hpp  game.hpp  piece.hpp  types.hpp
src/: board.cpp  game.cpp  main.cpp  piece.cpp
tests/: test.cpp
